# entia_rust

./: Cargo.toml
.github/workflows/: rust.yml
entia_check/: Cargo.toml
entia_check/src/: all.rs  any.rs  array.rs  check.rs  collect.rs  constant.rs  filter.rs  filter_map.rs  flatten.rs  function.rs  generate.rs  generator.rs  lib.rs  main.rs  map.rs  option.rs  or.rs  primitive.rs  sample.rs  shrink.rs  size.rs  wrap.rs
entia_check/src/test/: character.rs  mod.rs  number.rs
entia_check/src/tests/: character.rs  floating.rs  integer.rs  mod.rs  number.rs  string.rs  vector.rs
entia_core/: Cargo.toml
entia_core/src/: append.rs  array.rs  bits.rs  borrow.rs  call.rs  each.rs  empty.rs  few.rs  flags.rs  iterator.rs  lib.rs  marker.rs  maybe.rs  one.rs  prepend.rs  slice.rs  unzip.rs  utility.rs
entia_derive/: Cargo.toml
entia_example_01/: Cargo.toml
entia_example_02/: Cargo.toml
entia_macro/: Cargo.toml
entia_main/: Cargo.toml
entia_main/src/: add.rs  component.rs  create.rs  defer.rs  depend.rs  destroy.rs  duplicate.rs  entities.rs  entity.rs  error.rs  families.rs  family.rs  filter.rs  ignore.rs  inject.rs  inject2.rs  item.rs  lib.rs  local.rs  main.rs  message.rs  meta.rs  output.rs  query.rs  read.rs  resource.rs  resources.rs  run.rs  schedule.rs  segment.rs  store.rs  system.rs  template.rs  world.rs  write.rs
entia_main/src/test/: create.rs  depend.rs  mod.rs
entia_main_derive/: Cargo.toml
entia_meta/: Cargo.toml
entia_meta_derive/: Cargo.toml
entia_meta_macro/: Cargo.toml
entia_serialize/: Cargo.toml
entia_serialize/src/: cloner.rs  convert.rs  deserialize.rs  deserializer.rs  json.rs  lib.rs  merge.rs  meta.rs  node.rs  serialize.rs  serializer.rs  visit.rs
entia_serialize_derive/: Cargo.toml
src/: add.rs  and.rs  append.rs  bit_mask.rs  buffer.rs  call.rs  change.rs  component.rs  components.rs  core.rs  create.rs  defer.rs  depend.rs  dependency.rs  destroy.rs  duplicate.rs  emit.rs  entities.rs  entity.rs  error.rs  factory.rs  families.rs  family.rs  familyzzz.rs  filter.rs  group.rs  ignore.rs  initial.rs  initialize.rs  inject.rs  internal.rs  item.rs  lib.rs  local.rs  main.rs  message.rs  messages.rs  modify.rs  not.rs  prelude.rs  (+18 more)
src/tests/: mod.rs  (+1 more)
(+20 files in other folders)
