[package]
name = "entia"
version = "0.1.0"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entia_core = { path = "./entia_core" }
entia_macro = { path = "./entia_macro" }
entia_derive = { path = "./entia_derive" }
rayon = "*"

[workspace]
members = ["entia_core", "entia_macro", "entia_derive", "entia_example_01"]