[package]
name = "entia_check"
version = "0.1.0"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entia_macro = { path = "../entia_macro" }
entia_core = { path = "../entia_core" }
fastrand = "*"